Permitir a possibilidade de remover um scheduleItem #2

--- a/src/pages/TeacherForm/styles.css
+++ b/src/pages/TeacherForm/styles.css
@@ -60,6 +60,11 @@
     margin-top: 2.4rem;
 }
 
+#page-teacher-form main fieldset .schedule-item img {
+    width: 2rem;
+    color: var(--color-button-text);
+}
+
 #page-teacher-form main label {
     color: var(--color-text-complement);
 }
